--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -12,6 +14,7 @@ body {
   background-size: cover;
   max-width: 90%;
   margin: auto;
+  font-family: "Open Sans", serif;
 }
 
 header:first-child h1 {
@@ -57,7 +60,7 @@ header:first-child h1 {
   padding-right: 50px;
   padding-bottom: 50px;
   background-repeat: no-repeat;
-  background-position: 200px;
+  background-position: 250px;
 }
 tr:nth-child(even) {
   background-color: grey;
@@ -73,7 +76,7 @@ img {
 }
 
 p{
-  font-family: serif;
+  font-family: "Open Sans", serif;
   word-spacing: 10px;
   color: darkblue;
 }
